# datacatalog

./: .gitignore  LICENSE  README.md  databricks.yml  pyproject.toml
src/app/: .gitignore  README.md  app.yml  bootstrap_tables.py  create_genie_space.py  create_gold_tables.py  package-lock.json  package.json  pyproject.toml  start_local.sh  tsconfig.json  vite.config.ts
src/app/src/bhe_catalog/: _genie_space_template.json  _metadata.py
src/app/src/bhe_catalog/backend/: _query_tag.py  app.py  app_config.py  chat.py  confirm.py  db.py  llm.py  models.py  router.py  setup_genie.py
src/app/src/bhe_catalog/backend/core/: _config.py  _defaults.py  _factory.py  _query_tag_mw.py
src/app/src/bhe_catalog/backend/tools/: __init__.py  _base.py  catalog.py  dimensions.py  genie.py  proposals.py  research.py  schemas.py  value.py
src/app/src/bhe_catalog/ui/: index.html
src/app/src/bhe_catalog/ui/components/: sankey-diagram.tsx
src/app/src/bhe_catalog/ui/components/apx/: logo.tsx
src/app/src/bhe_catalog/ui/components/chat/: chat-launcher.tsx  markdown.tsx
src/app/src/bhe_catalog/ui/lib/: api-client.ts  api.ts  chat-api.ts  markdown.ts  pdf-export.ts
src/app/src/bhe_catalog/ui/routes/: __root.tsx  index.tsx
src/app/src/bhe_catalog/ui/routes/_sidebar/: about.tsx  analytics.tsx  artifacts.tsx  company.tsx  dashboard.tsx  data-catalog.tsx  edit.tsx  gaps.tsx  knowledge.tsx  route.tsx  rules.tsx  source-systems.tsx  taxonomy.tsx  use-cases.tsx  value-readiness.tsx
src/app/src/bhe_catalog/ui/styles/: globals.css
src/app/src/bhe_catalog/ui/types/: routeTree.gen.ts
(+27 files in other folders)
